balance api added
